# cpp-samples

./: CMakeLists.txt
build-scripts/: cmake-compile.sh  cmake-configure.sh  rerun.sh
include/: Person.h
src/: main.cpp  sdl_test.cpp  sfml_test.cpp
